--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
             <artifactId>ansj_seg</artifactId>
             <version>5.1.6</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-text</artifactId>
+            <version>1.1</version>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
